[gd_scene load_steps=19 format=3 uid="uid://dvv524hyphtrv"]

[ext_resource type="PackedScene" uid="uid://bqnexigap7rvi" path="res://src/scenes/Card/Card.tscn" id="1_dct3b"]
[ext_resource type="Script" uid="uid://bl13yk30ytecf" path="res://src/scenes/Player/Player.gd" id="1_i1tti"]
[ext_resource type="Theme" uid="uid://cgtt3m2qrfdic" path="res://src/themes/main.tres" id="1_yifjk"]
[ext_resource type="Script" uid="uid://dn3bjdtw18ykg" path="res://src/resources/Deck/Card.gd" id="2_6r4mo"]
[ext_resource type="PackedScene" uid="uid://c5yctegu3uyp4" path="res://src/scenes/CardSlot/CardSlot.tscn" id="2_yifjk"]
[ext_resource type="Script" uid="uid://b42lvlav8tec5" path="res://src/resources/Card/Player/Veg.gd" id="3_x5opu"]
[ext_resource type="Script" uid="uid://30lst6iterhy" path="res://src/resources/Card/Player/Bucket.gd" id="4_qbrp6"]
[ext_resource type="Script" uid="uid://dm3uu8k5i5jnu" path="res://src/resources/Card/Player/Jar.gd" id="5_7p6s4"]
[ext_resource type="PackedScene" uid="uid://uwxw2m4rypp5" path="res://src/scenes/Deck/Deck.tscn" id="5_i1tti"]
[ext_resource type="Script" uid="uid://c5gyruv8jptv1" path="res://src/resources/Card/Player/Oil.gd" id="6_t61j7"]

[sub_resource type="Resource" id="Resource_qbrp6"]
script = ExtResource("4_qbrp6")
metadata/_custom_type_script = "uid://30lst6iterhy"

[sub_resource type="Resource" id="Resource_7p6s4"]
script = ExtResource("2_6r4mo")
card = SubResource("Resource_qbrp6")
count = 1
metadata/_custom_type_script = "uid://dn3bjdtw18ykg"

[sub_resource type="Resource" id="Resource_t61j7"]
script = ExtResource("5_7p6s4")
metadata/_custom_type_script = "uid://dm3uu8k5i5jnu"

[sub_resource type="Resource" id="Resource_ds82a"]
script = ExtResource("2_6r4mo")
card = SubResource("Resource_t61j7")
count = 1
metadata/_custom_type_script = "uid://dn3bjdtw18ykg"

[sub_resource type="Resource" id="Resource_01ffs"]
script = ExtResource("6_t61j7")
metadata/_custom_type_script = "uid://c5gyruv8jptv1"

[sub_resource type="Resource" id="Resource_b87m1"]
script = ExtResource("2_6r4mo")
card = SubResource("Resource_01ffs")
count = 1
metadata/_custom_type_script = "uid://dn3bjdtw18ykg"

[sub_resource type="Resource" id="Resource_1i85u"]
script = ExtResource("3_x5opu")
metadata/_custom_type_script = "uid://b42lvlav8tec5"

[sub_resource type="Resource" id="Resource_tyroy"]
script = ExtResource("2_6r4mo")
card = SubResource("Resource_1i85u")
count = 1
metadata/_custom_type_script = "uid://dn3bjdtw18ykg"

[node name="Player" type="CanvasLayer" groups=["Player"]]
script = ExtResource("1_i1tti")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -348.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_yifjk")
theme_type_variation = &"ScreenMargin"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerArea" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PreparedCards" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PlayerArea"]
layout_mode = 2

[node name="CardSlot" parent="MarginContainer/HBoxContainer/PlayerArea/PreparedCards" instance=ExtResource("2_yifjk")]
layout_mode = 2

[node name="CardSlot_2" parent="MarginContainer/HBoxContainer/PlayerArea/PreparedCards" instance=ExtResource("2_yifjk")]
layout_mode = 2

[node name="CardSlot_3" parent="MarginContainer/HBoxContainer/PlayerArea/PreparedCards" instance=ExtResource("2_yifjk")]
layout_mode = 2

[node name="CardSlot_4" parent="MarginContainer/HBoxContainer/PlayerArea/PreparedCards" instance=ExtResource("2_yifjk")]
layout_mode = 2

[node name="CardHandAndDeck" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PlayerArea"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CardHand" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck"]
layout_mode = 2

[node name="CardSlot" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardHand" instance=ExtResource("2_yifjk")]
unique_name_in_owner = true
layout_mode = 2

[node name="Card" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardHand/CardSlot" instance=ExtResource("1_dct3b")]
layout_mode = 2
disabled = true

[node name="CardSlot_2" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardHand" instance=ExtResource("2_yifjk")]
unique_name_in_owner = true
layout_mode = 2

[node name="Card" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardHand/CardSlot_2" instance=ExtResource("1_dct3b")]
layout_mode = 2
disabled = true

[node name="CardSlot_3" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardHand" instance=ExtResource("2_yifjk")]
unique_name_in_owner = true
layout_mode = 2

[node name="Card" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardHand/CardSlot_3" instance=ExtResource("1_dct3b")]
layout_mode = 2
disabled = true

[node name="CardSlot_4" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardHand" instance=ExtResource("2_yifjk")]
unique_name_in_owner = true
layout_mode = 2

[node name="Card" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardHand/CardSlot_4" instance=ExtResource("1_dct3b")]
layout_mode = 2
disabled = true

[node name="CardDeckSlot" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck" instance=ExtResource("2_yifjk")]
layout_mode = 2

[node name="Deck" parent="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardDeckSlot" instance=ExtResource("5_i1tti")]
layout_mode = 2
deck = Array[ExtResource("2_6r4mo")]([SubResource("Resource_7p6s4"), SubResource("Resource_ds82a"), SubResource("Resource_b87m1"), SubResource("Resource_tyroy")])

[node name="Spacer_2" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/PlayerArea/CardHandAndDeck/CardDeckSlot/Deck" to="." method="_on_deck_pressed"]
